享用git的網頁所設定的package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "homepage": ".",
+
   "name": "fois",
+  "homepage":"https://Lw-CodeStorage.github.io/reactFois",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -42,6 +43,9 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+   "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
+   
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
